test/fail/runtime_exception_in_solution/src/RuntimeExceptionInSolution.hx
package;

class RuntimeExceptionInSolution {
	public static function identity<T>(x:T):T {
		throw "runtime exception";
	}
}
